# LocMoFitPy2

./: .gitignore  matlab_api.py  pyproject.toml  run.m  run_locmofit.m
notebooks/: fit npc copy.ipynb  fit npc.ipynb  fit ring.ipynb  fit spcap.ipynb
notebooks/data/: ground_truth.csv  ground_truth_npc.csv  ground_truth_ring.csv  ground_truth_spcap.csv  simulated_data.csv  simulated_data_npc.csv  simulated_data_ring.csv  simulated_data_spcap.csv
src/locmofitpy2/: __init__.py  basic_shapes.py  loss.py  models.py  optim.py  pipeline.py  transformations.py  unit_models.py  utils.py
src/locmofitpy2/models/: __init__.py  basic_shapes.py  default_params.py  models.py  npc.py  registry.py  ring.py  spcap.py  unit_models.py  utils.py
tests/: test_ring_fit.py  test_spcap_fit.py  test_spcap_fit_cuda12.py
