[project]
authors = [{name = "Lance (Weiqing) Xu", email = "lance.xwq@gmail.com"}]
name = "LocMoFitPy2"
requires-python = ">=3.11,<3.13" # Python versions supported by MATLAB
version = "0.1.0"
dependencies = ["jax>=0.8,<1", "optax>=0.2.6,<0.3", "equinox>=0.13.3,<0.14",]

[project.optional-dependencies]
cuda12 = ['jax[cuda12]; platform_system=="Linux"',]
cuda13 = ['jax[cuda13]; platform_system=="Linux"',]
tpu = ["jax[tpu]",]

[dependency-groups]
dev = [
  "ipykernel>=7.1.0,<8",
  "jupyterlab>=4.5.2,<5",
  "matplotlib>=3.10.8,<4",
  "pandas>=3.0.0,<4",
  "ruff>=0.14.14,<0.15",
  "mypy>=1.19.1,<2",
  "pytest>=8,<9",
  "numpy>=2.4.1,<3",
  "xprof>=2.21.5,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
locmofitpy2 = { path = ".", editable = true }

[tool.pixi.feature.cuda12]
platforms = ["linux-64"]

[tool.pixi.feature.cuda13]
platforms = ["linux-64"]

[tool.pixi.environments]
default = { features = [], solve-group = "cpu" }
dev = { features = ["dev"], solve-group = "cpu" }
cuda12 = { features = ["cuda12"], solve-group = "cuda12" }
cuda12dev = { features = ["dev", "cuda12"], solve-group = "cuda12" }
cuda13 = { features = ["cuda13"], solve-group = "cuda13" }
cuda13dev = { features = ["dev", "cuda13"], solve-group = "cuda13" }

[tool.pixi.tasks]
